fix linkedin link as well as try to fix boxes getting cut off on the right side of the screen

--- a/CSS/boxes.css
+++ b/CSS/boxes.css
@@ -5,30 +5,31 @@
     border: 2px solid #303446;
     font-size: 5vw;
     height: 100%;
-    width: 90%;
+    width: 100%;
     text-align: center;
 }
 
-.text-block-center {
+.text-block {
     background-color: #414559;
     border: 2px solid #303446;
     /* text-align: center; */
     font-size: 1vw;
 }
-
+/*
 .text-block-left {
     background-color: #414559;
     border: 2px solid #303446;
-    /* text-align: left; */
+    text-align: left;
     font-size: 1vw;
 }
 
 .text-block-right {
     background-color: #414559;
     border: 2px solid #303446;
-    /* text-align: right; */
+    text-align: right;
     font-size: 1vw;
 }
+*/
 
 /* Navigation */
 
@@ -49,8 +50,8 @@
 }
 
 .link-wrapper a {
-    color: #c6d0f5;
-    text-decoration: none;
+    color: #f4b8e4;
+    text-decoration: underline #f4b8e4 1px;
     transition: color 0.5s;
 }
 
