--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #232634;
     font-family: monospace;
     height: 100%;
-    width: 90%;
+    width: 100%;
 }
 
 h1 {
